fixing margins and spacing

--- a/styles/scss/pages/home.scss
+++ b/styles/scss/pages/home.scss
@@ -12,12 +12,13 @@
         color: $secondaryColor;
         margin-left: 25px;
         align-self: center;
+        margin: 0 2vw;
     }
 }
 .info-blocks {
     display: flex;
     flex-direction: column;
-    margin: 144px 85px;
+    margin: 144px 2vw;
     .painting-section {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
